--- a/1-免疫学概论.md
+++ b/1-免疫学概论.md
@@ -1,10 +1,33 @@
-# 第一章 医学免疫学简介
+# 第一节 医学免疫学简介
 
 ## 一、免疫系统的组成和基本功能
 
 **免疫功能**是机体识别和清除外来入侵抗原及体内突变或衰老细胞并维持机体内环境稳定的功能的总称。
 
-1. 免疫防御（immune defense）：防止外界病原体的入侵及清除已入侵病原体（如细菌、病毒、真菌、支原体、衣原体、寄生虫等）及其他有害物质。
-2. 免疫监视（immune surveillance）
-3. 免疫自稳（immune homeostasis）
+1. **免疫防御（immune defense）**：防止外界病原体的入侵及清除已入侵病原体（如细菌、病毒、真菌、支原体、衣原体、寄生虫等）及其他有害物质。
 
+   免疫防御功能过低或缺如，可发生免疫缺陷病；但若应答过强或持续时间过长，则在清除病原体的同时，也可导致机体的组织损伤或功能异常，如发生超敏反应等。
+
+2. **免疫监视**（immune surveillance）：随时发现和清除体内出现的“非己”成分，如由基因突变而产生的肿瘤细胞以及衰老、死亡细胞等。免疫监视功能低下，可能导致肿瘤的发生。
+
+3. **免疫自稳**（immune homeostasis）：通过自身免疫耐受和免疫调节两种主要的机制来达到机体内环境的稳定。
+
+   一般情况下，免疫系统对自身组织细胞不产生免疫应答称为免疫耐受，赋予了免疫系统有区别“自己”和“非己”的能力。一旦免疫耐受被打破免疫调节功能紊乱，会导致自身免疫病和过敏性疾病的发生。
+
+   此外，免疫系统与神经系统和内分泌系统一起组成了神经内分泌免疫网络，在调节整个机体内环境的稳定中发挥重要作用。
+
+## 二、免疫应答的种类及其特点
+
+**免疫应答（immune response）**是指免疫系统识别和清除“非己”物质的整个过程，可分为**固有免疫（innate immunity）**和**适应性免疫（adaptive immunity）**两大类。
+
+固有免疫又称**先天性免疫（natural immunity or native immunity）或非特异性免疫（non- specific immunity）**，适应性免疫又称**获得性免疫（acquired immunity）或特异性免疫（ specific immunity）**。
+
+![1-1](C:\Users\pc\Documents\GitHub\Medical-Immunology\1-免疫学概论.assets\1-1.png)
+
+# 第二节 免疫学发展简史
+
+## 一、经验免疫学时期
+
+## 二、实验免疫学时期
+
+## 三、科学免疫学时期
