--- a/2-免疫器官和组织.md
+++ b/2-免疫器官和组织.md
@@ -46,7 +46,7 @@
 
 #### 1.皮质
 
-胸腺皮质分为浅皮质区（outer cortex）和深皮质区（inter cortex）。皮质内85%~90%的细胞为胸腺细胞（主要是未成熟T细胞），并含有TEC、MΦ和DC等。
+胸腺皮质分为**浅皮质区（outer cortex）**和**深皮质区（inter cortex）**。皮质内85%~90%的细胞为胸腺细胞（主要是未成熟T细胞），并含有TEC、MΦ和DC等。
 
 胸腺浅皮质区内的胸腺上皮细胞可包绕胸腺细胞，称为胸腺抚育细胞（thymic nursing cell），可产生某些促进胸腺细胞分化发育的激素和细胞因子。深皮质区内主要为体积较小的皮质胸腺细胞。
 
@@ -69,4 +69,112 @@
 
 # 第二节 外周免疫器官和组织
 
-外周免疫器官（ peripheral immune organ）或称次级淋巴器官（ secondary lymphoid organ）
+**外周免疫器官（peripheral immune organ）**或称**次级淋巴器官（secondary lymphoid organ）**，是成熟淋巴细胞（T细胞、B细胞）定居的场所，也是淋巴细胞对外来抗原产生免疫应答的主要部位。外周免疫器官包括淋巴结、脾和位于胃肠道、呼吸道及泌尿生殖道的黏膜相关淋巴组织等。
+
+## 一、淋巴结
+
+**淋巴结（lymph node）**是结构最完备的外周免疫器官，广泛分布于全身非黏膜部位的淋巴通道汇集处。
+
+### （一）淋巴结的结构
+
+**淋巴结（lymph node）**实质分为**皮质区**和**髓质区**两个部分。
+
+![2-5](C:\Users\pc\Documents\GitHub\Medical-Immunology\2-免疫器官和组织.assets\2-5.png)
+
+#### 1.皮质
+
+皮质分为**浅皮质区**和**深皮质区**。
+
+靠近被膜下为浅皮质区，是B细胞定居的场所，称为非胸腺依赖区（thymus-independent area）。在该区内，大量B细胞聚集成**初级淋巴滤泡（primary lymphoid follicle）**，或称**淋巴小结（lymphoid nodule）**。初级淋巴滤泡主要含未受抗原刺激的初始B细胞，无生发中心。受抗原刺激后，淋巴滤泡内出现生发中心（germinal center，GC），称为**次级淋巴滤泡（secondary lymphoid follicle）**，内含大量增殖分化的B淋巴母细胞，后者可向内转移至淋巴结中心部髓质的髓索，分化为浆细胞并产生抗体。B细胞缺陷时，皮质缺乏初级淋巴滤泡和生发中心。
+
+皮质区与髓质之间的深皮质区又称**副皮质区（paracortex）**，是T细胞定居的场所，称为**胸腺依赖区（thymus-dependent area）**。副皮质区含有自组织迁移而来的DC，高表达MHCⅡ类分子，是专职的抗原提呈细胞。副皮质区有由内皮细胞组成的、呈非连续状的毛细血管后微静脉（post-capillary venule，PCV），也称**高内皮微静脉（high endothelial venule，HEV）**，是沟通血液循环和淋巴循环的重要通道，血液中的淋巴细胞由此部位可进入淋巴结实质
+
+#### 2.髓质
+
+髓质由髓索和髓窦组成。髓索由致密聚集的淋巴细胞组成，主要为B细胞和浆细胞，也含部分T细胞及MΦ。髓窦内富含MΦ，有较强的捕捉、清除病原体的作用
+
+### （二）淋巴结的功能
+
+1. T细胞和B细胞定居的场所
+2. 免疫应答场所
+3. 过滤作用
+4. 参与淋巴细胞再循环
+
+## 二、脾
+
+**脾（spleen）**是胚胎时期的造血器官，自骨髓开始造血后，脾演变成人体最大的外周免疫器官。脾在结构上不与淋巴管道相连，也无淋巴窦，但含有大量血窦
+
+### （一）脾的结构
+
+![2-6](C:\Users\pc\Documents\GitHub\Medical-Immunology\2-免疫器官和组织.assets\2-6.png)
+
+#### 1.白髓
+
+**白髓（white pulp）**为密集的淋巴组织，由围绕中央动脉而分布的动脉周围淋巴鞘（periarteriolar lymphoid sheaths，PALS）、脾小结（splenic nodule）和边缘区（marginal zone）组成，相当于淋巴结的皮质。脾动脉人脾后，分支成为小梁动脉，小梁动脉继续分支进入脾实质，称为**中央动脉**。
+
+包裹中央动脉的PALS是厚层弥散淋巴组织，由密集的T细胞、少量DC及MΦ构成，为T细胞区。
+
+PALS的旁侧有脾小结，内含大量B细胞及少量MΦ和FDC，为B细胞区。
+
+未受抗原刺激时脾小结为初级淋巴滤泡，受抗原刺激后中央部出现生发中心，为次级淋巴滤泡。
+
+白髓与红髓交界的狭窄区域为**边缘区**，内含T细胞、B细胞和较多MΦ。中央动脉的侧支末端在此处膨大形成边缘窦（marginal sinus）。T细胞经边缘窦迁人PALS，而B细胞则迁入脾小结和脾索。白髓内的淋巴细胞也可进入边缘窦，参与淋巴细胞再循环。
+
+#### 2.红髓
+
+白髓和边缘区外侧的广大区域为**红髓**，由**脾索**和**脾血窦（splenic sinus）**组成。
+
+脾索为索条状组织，主要含B细胞、浆细胞、MΦ和DC。
+
+脾索之间为脾血窦，其内充满血液。脾血窦汇人小梁静脉，再于脾门汇合为脾静脉出脾。脾索和脾血窦中的MΦ能吞噬和清除衰老的血细胞、抗原抗体复合物或其他异物，并具有抗原提呈作用。
+
+### （二）脾的功能
+
+1. T细胞和B细胞定居的场所
+2. 免疫应答发生的场所
+3. 合成生物活性物质
+4. 过滤作用
+
+## 三、黏膜相关淋巴组织
+
+**黏膜相关淋巴组织（mucosal-associated lymphoid tissue，MALT）**亦称**黏膜免疫系统（mucosal immune system，MIS）**，主要指胃肠道、呼吸道及泌尿生殖道黏膜固有层和上皮细胞下散在的淋巴组织，以及带有生发中心的淋巴组织，如扁导体、小肠派尔集合淋巴结（Peyer patches，PP）及阑尾等，是发生黏膜免疫应答的主要部位。
+
+黏膜是病原体等抗原性异物入侵机体的主要部位，人体黏膜表面积约400$\mathrm{m}^{2}$，机体近50%的淋巴组织分布于黏膜系统，故MALT构成了人体重要的防御屏障。
+
+### （一）MALT的组成
+
+MALT主要包括肠相关淋巴组织、鼻相关淋巴组织和支气管相关淋巴组织等。
+
+#### 1.肠相关淋巴组织
+
+![2-7](C:\Users\pc\Documents\GitHub\Medical-Immunology\2-免疫器官和组织.assets\2-7.png)
+
+**肠相关淋巴组织（gut-associated lymphoid tissue，GALT）**是位于肠黏膜下的淋巴组织，由PP、阑尾、孤立淋巴滤泡、上皮内淋巴细胞及固有层中弥散分布的淋巴细胞组成，主要作用是抵御肠道病原微生物感染。
+
+GALT中的PP和上皮内淋巴细胞在摄取肠道抗原及黏膜免疫应答中发挥重要作用。
+
+##### （1）派尔集合淋巴结（PP）
+
+##### （2）上皮内淋巴细胞（IEL）
+
+#### 2.鼻相关淋巴组织
+
+#### 3.支气管相关淋巴组织
+
+### （二）MALT的功能及其特点
+
+1. 行使黏膜局部免疫应答
+2. 产生分泌型$\lg A$
+
+# 第三节 淋巴细胞归巢与再循环
+
+**淋巴细胞归巢（lymphocyte homing）**指血液中淋巴细胞选择性趋向迁移并定居于外周免疫器官的特定区域或特定组织的过程。淋巴细胞表面**不同的黏附分子(又称归巢受体，homing receptor)**与特定组织HEV表面的**黏附分子（又称地址素，addressin）**的相互作用决定该细胞的去向（黏膜、皮肤或炎症部位等）。
+
+**淋巴细胞再循环（lymphocyte recirculation）**指定居在外周免疫器官的淋巴细胞,由输出淋巴管经淋巴干、胸导管或右淋巴导管进人血液循环,经血液循环到达外周免疫器官后，穿越HEV，重新分布于全身淋巴器官和组织的反复循环过程。参与再循环的淋巴细胞主要是T细胞，约占80%以上，其次为B细胞。
+
+淋巴细胞再循环的生物学意义在于：
+
+1. 使体内淋巴细胞在外周免疫器官和组织的分布更趋合理，有助于增强整个机体的免疫功能
+2. 增加淋巴细胞与抗原及抗原提呈细胞（APC）接触的机会，有利于适应性免疫应答的产生
+3. 使机体所有免疫器官和组织联系成为一个有机的整体,并将免疫信息传递给全身各处的淋巴细胞和其他免疫细胞,有利于动员各种免疫细胞和效应细胞迁移至病原体、肿瘤或
+   其他抗原性异物所在部位,从而发挥免疫效应。
